[gd_scene load_steps=21 format=3 uid="uid://babntosbiq5r8"]

[ext_resource type="Script" path="res://radiomqtt/radiomqtt.gd" id="1_anot2"]
[ext_resource type="PackedScene" uid="uid://ktm7k0co2o7l" path="res://addons/mqtt/mqtt.tscn" id="2_4wm5t"]
[ext_resource type="Script" path="res://radiomqtt/MQTTnetwork.gd" id="2_y485j"]
[ext_resource type="Texture2D" uid="uid://opxkbtwrctgn" path="res://icon.svg" id="3_eh2h5"]
[ext_resource type="Script" path="res://radiomqtt/voxdetector.gd" id="3_qvq17"]
[ext_resource type="PackedScene" uid="uid://c1ibcb1toyerh" path="res://radiomqtt/member.tscn" id="4_w5dv2"]

[sub_resource type="AudioStreamMicrophone" id="AudioStreamMicrophone_itmlg"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kcsl6"]
bg_color = Color(0.0705882, 0.0235294, 0.564706, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ljq7l"]
bg_color = Color(0.101961, 0.101961, 0.101961, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_30le3"]
bg_color = Color(0.909804, 0.392157, 0.435294, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_k6a7f"]
bg_color = Color(0.6, 0.6, 0.0470588, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3io8e"]
bg_color = Color(0, 0.545098, 0.290196, 1)

[sub_resource type="Shader" id="Shader_022wp"]
code = "// NOTE: Shader automatically converted from Godot Engine 4.3.beta's CanvasItemMaterial.

shader_type canvas_item;
render_mode blend_mix;

uniform float blue = 1.0; // you can assign a default value to uniforms
uniform sampler2D voice : repeat_enable;

void fragment() {
  COLOR = vec4(UV, 0.5, 1.0);
  vec4 v = texture(voice, UV);
  float d = UV.y*2.0 - v.r*4.0 - 1.0;
  COLOR = (abs(d) < 0.1 ? vec4(0.8,0.8,0.9,1.0) : vec4(0.1,0.1,0.1,1.0));
}"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_cklni"]
shader = SubResource("Shader_022wp")
shader_parameter/blue = 1.0
shader_parameter/voice = ExtResource("3_eh2h5")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_67wxx"]
bg_color = Color(0.290196, 0.505882, 0.490196, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_icid5"]
bg_color = Color(0.301961, 0.0627451, 0.0980392, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_onpxr"]
bg_color = Color(0.427451, 0.439216, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7rhvb"]
bg_color = Color(0.470588, 0.211765, 0.533333, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_q145v"]
bg_color = Color(0.654902, 0.266667, 0.345098, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_m5fk6"]
bg_color = Color(0.509804, 0.145098, 0.203922, 1)

[node name="radiomqtt" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 7.0
offset_right = -3.0
offset_bottom = -11.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_anot2")

[node name="AudioStreamMicrophone" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamMicrophone_itmlg")
autoplay = true
bus = &"MicrophoneBus"

[node name="LabelTitle" type="Label" parent="."]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_type_variation = &"HeaderSmall"
theme_override_styles/normal = SubResource("StyleBoxFlat_kcsl6")
text = "Voice Opus Compressed Packets over MQTT Demo"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label" type="RichTextLabel" parent="."]
layout_mode = 2
bbcode_enabled = true
text = "Hold down [u]PTT[/u] (Push-To-Talk) to record, or toggle [u]Vox[/u] to activate PTT automatically by volume. Hold down [u]Sil[/u] to set the silnce threshold for Vox."
fit_content = true

[node name="HSeparator3" type="HSeparator" parent="."]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="HBoxBigButtons" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 4

[node name="PTT" type="Button" parent="HBoxBigButtons"]
custom_minimum_size = Vector2(250, 100)
layout_mode = 2
tooltip_text = "Hold down to talk"
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxFlat_ljq7l")
theme_override_styles/pressed = SubResource("StyleBoxFlat_30le3")
text = "PTT
"

[node name="VSeparator" type="VSeparator" parent="HBoxBigButtons"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2

[node name="VBoxVox" type="VBoxContainer" parent="HBoxBigButtons"]
layout_mode = 2

[node name="Vox" type="Button" parent="HBoxBigButtons/VBoxVox"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
tooltip_text = "Voice operated mode set by threshold"
theme_override_font_sizes/font_size = 27
theme_override_styles/pressed = SubResource("StyleBoxFlat_k6a7f")
toggle_mode = true
text = "Vox"

[node name="Leadtime" type="SpinBox" parent="HBoxBigButtons/VBoxVox"]
layout_mode = 2
max_value = 1.0
step = 0.05
update_on_text_changed = true
prefix = "Leadtime:"
suffix = "Seconds"

[node name="Hangtime" type="SpinBox" parent="HBoxBigButtons/VBoxVox"]
layout_mode = 2
max_value = 5.0
step = 0.1
value = 1.5
update_on_text_changed = true
prefix = "Hangtime:"
suffix = "Seconds"

[node name="Silence" type="Button" parent="HBoxBigButtons/VBoxVox"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
tooltip_text = "Hold this down to set the Vox silence threshold"
text = "Sil"

[node name="HSeparator2" type="HSeparator" parent="."]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="HBoxMicTalk" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
script = ExtResource("3_qvq17")

[node name="MicWorking" type="Button" parent="HBoxMicTalk"]
layout_mode = 2
tooltip_text = "AudioStreamMicrophone is playing"
theme_override_styles/pressed = SubResource("StyleBoxFlat_3io8e")
toggle_mode = true
text = "Mic
Ena-
bled"

[node name="HSliderVox" type="HSlider" parent="HBoxMicTalk"]
z_index = 3
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
value = 20.0

[node name="ColorRectBackground" type="ColorRect" parent="HBoxMicTalk/HSliderVox"]
z_index = -3
material = SubResource("ShaderMaterial_cklni")
layout_mode = 0
offset_right = 378.0
offset_bottom = 35.0
mouse_filter = 1
color = Color(0.255659, 0.255659, 0.255659, 1)

[node name="ColorRectLoudness" type="ColorRect" parent="HBoxMicTalk/HSliderVox"]
z_index = -2
layout_mode = 0
offset_right = 111.0
offset_bottom = 24.0
mouse_filter = 1
color = Color(0.224055, 0.434373, 0.715477, 1)

[node name="ColorRectLoudnessRMS" type="ColorRect" parent="HBoxMicTalk/HSliderVox"]
z_index = -2
layout_mode = 0
offset_top = 4.0
offset_right = 111.0
offset_bottom = 28.0
mouse_filter = 1
color = Color(0.223529, 0.541176, 0.713726, 1)

[node name="ColorRectThreshold" type="ColorRect" parent="HBoxMicTalk/HSliderVox"]
z_index = -1
layout_mode = 0
offset_right = 4.0
offset_bottom = 32.0
mouse_filter = 1
color = Color(0.689579, 0.760623, 0.0826142, 1)

[node name="HSeparator" type="HSeparator" parent="."]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="Label2" type="Label" parent="."]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_67wxx")
text = "Recording Playback"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label3" type="RichTextLabel" parent="."]
layout_mode = 2
bbcode_enabled = true
text = "Playback the current recording after compression at different rates defined below.  Compression is applied to the original raw recording."
fit_content = true

[node name="HBoxPlaycount" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 4

[node name="Play" type="Button" parent="HBoxPlaycount"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_icid5")
text = "Play
"

[node name="VSeparator" type="VSeparator" parent="HBoxPlaycount"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="HBoxPlaycount"]
layout_mode = 2
columns = 4

[node name="Label2" type="Label" parent="HBoxPlaycount/GridContainer"]
layout_mode = 2
text = "Time (s):"

[node name="TimeSecs" type="LineEdit" parent="HBoxPlaycount/GridContainer"]
layout_mode = 2
text = "0"
editable = false

[node name="Label3" type="Label" parent="HBoxPlaycount/GridContainer"]
layout_mode = 2
text = "Bytes:"

[node name="Totalbytes" type="LineEdit" parent="HBoxPlaycount/GridContainer"]
layout_mode = 2
editable = false

[node name="Label" type="Label" parent="HBoxPlaycount/GridContainer"]
layout_mode = 2
text = "Frames:"

[node name="FrameCount" type="LineEdit" parent="HBoxPlaycount/GridContainer"]
layout_mode = 2
editable = false

[node name="Label4" type="Label" parent="HBoxPlaycount/GridContainer"]
layout_mode = 2
text = "Bytes/s:"

[node name="Bytespersec" type="LineEdit" parent="HBoxPlaycount/GridContainer"]
layout_mode = 2
editable = false

[node name="HSeparator4" type="HSeparator" parent="."]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="VBoxFrameLength" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxFrameLength"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_onpxr")
text = "LibOpus compression and resampling"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxBitRate" type="HBoxContainer" parent="VBoxFrameLength"]
layout_mode = 2

[node name="LabBitRate" type="Label" parent="VBoxFrameLength/HBoxBitRate"]
layout_mode = 2
text = "Opus Bit Rate"

[node name="BitRate" type="OptionButton" parent="VBoxFrameLength/HBoxBitRate"]
layout_mode = 2
item_count = 5
popup/item_0/text = "24000"
popup/item_0/id = 0
popup/item_1/text = "12000"
popup/item_1/id = 1
popup/item_2/text = "10000"
popup/item_2/id = 2
popup/item_3/text = "6000"
popup/item_3/id = 3
popup/item_4/text = "3000"
popup/item_4/id = 4

[node name="HBoxOpusFrame" type="HBoxContainer" parent="VBoxFrameLength"]
layout_mode = 2
size_flags_horizontal = 0

[node name="LabFrameDuration" type="Label" parent="VBoxFrameLength/HBoxOpusFrame"]
layout_mode = 2
text = "Frame duration"

[node name="FrameDuration" type="OptionButton" parent="VBoxFrameLength/HBoxOpusFrame"]
layout_mode = 2
item_count = 6
popup/item_0/text = "2.5ms"
popup/item_0/id = 0
popup/item_1/text = "5ms"
popup/item_1/id = 1
popup/item_2/text = "10ms"
popup/item_2/id = 2
popup/item_3/text = "20ms"
popup/item_3/id = 3
popup/item_4/text = "40ms"
popup/item_4/id = 4
popup/item_5/text = "60ms"
popup/item_5/id = 5

[node name="LabFrameLength" type="Label" parent="VBoxFrameLength/HBoxOpusFrame"]
layout_mode = 2
text = "---"

[node name="HBoxAudioFrame" type="HBoxContainer" parent="VBoxFrameLength"]
layout_mode = 2
size_flags_horizontal = 0

[node name="LabAudioSampler" type="Label" parent="VBoxFrameLength/HBoxAudioFrame"]
layout_mode = 2
text = "Audio sampler"

[node name="ResampleState" type="OptionButton" parent="VBoxFrameLength/HBoxAudioFrame"]
layout_mode = 2
item_count = 3
popup/item_0/text = "Uncompressed"
popup/item_0/id = 0
popup/item_1/text = "Speex Resample"
popup/item_1/id = 1
popup/item_2/text = "44.1k as 48k"
popup/item_2/id = 2

[node name="LabFrameLength" type="Label" parent="VBoxFrameLength/HBoxAudioFrame"]
layout_mode = 2
text = "---"

[node name="HSeparator5" type="HSeparator" parent="."]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="Label4" type="Label" parent="."]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_7rhvb")
text = "MQTT transmission
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MQTTnetwork" type="HBoxContainer" parent="."]
layout_mode = 2
script = ExtResource("2_y485j")

[node name="MQTT" parent="MQTTnetwork" instance=ExtResource("2_4wm5t")]
verbose_level = 1
binarymessages = true

[node name="Connect" type="Button" parent="MQTTnetwork"]
layout_mode = 2
theme_override_styles/pressed = SubResource("StyleBoxFlat_q145v")
toggle_mode = true
text = "Connect"

[node name="VSeparator" type="VSeparator" parent="MQTTnetwork"]
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="MQTTnetwork"]
layout_mode = 2
columns = 5

[node name="Label" type="Label" parent="MQTTnetwork/GridContainer"]
layout_mode = 2
text = "Broker:"

[node name="broker" type="LineEdit" parent="MQTTnetwork/GridContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2

[node name="Label3" type="Label" parent="MQTTnetwork/GridContainer"]
layout_mode = 2
text = "User:"

[node name="mqttuser" type="LineEdit" parent="MQTTnetwork/GridContainer"]
layout_mode = 2

[node name="Label5" type="Label" parent="MQTTnetwork/GridContainer"]
layout_mode = 2
text = "presets:"

[node name="Label2" type="Label" parent="MQTTnetwork/GridContainer"]
layout_mode = 2
text = "topic
"

[node name="topic" type="LineEdit" parent="MQTTnetwork/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "myplace"

[node name="Label4" type="Label" parent="MQTTnetwork/GridContainer"]
layout_mode = 2
text = "Passwd:"

[node name="mqttpassword" type="LineEdit" parent="MQTTnetwork/GridContainer"]
layout_mode = 2

[node name="presets" type="OptionButton" parent="MQTTnetwork/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
item_count = 4
popup/item_0/text = "doesliverpool"
popup/item_0/id = 0
popup/item_1/text = "hivemq"
popup/item_1/id = 1
popup/item_2/text = "m.org"
popup/item_2/id = 2
popup/item_3/text = "hass"
popup/item_3/id = 3

[node name="HBoxMosquitto" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label2" type="Label" parent="HBoxMosquitto"]
layout_mode = 2
text = "Friendly name:"

[node name="FriendlyName" type="LineEdit" parent="HBoxMosquitto"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_m5fk6")

[node name="Label" type="Label" parent="HBoxMosquitto"]
layout_mode = 2
text = "Shell $> "

[node name="Cmd" type="LineEdit" parent="HBoxMosquitto"]
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Use this shell command to externally monitor messages through the broker"
text = "mosquitto_sub ..."
editable = false

[node name="VBoxMQTT" type="VBoxContainer" parent="."]
visible = false
layout_mode = 2

[node name="HBoxConnect" type="HBoxContainer" parent="VBoxMQTT"]
layout_mode = 2

[node name="ConnectMQTT" type="Button" parent="VBoxMQTT/HBoxConnect"]
layout_mode = 2
toggle_mode = true
text = "Connect MQTT"

[node name="Myname" type="LineEdit" parent="VBoxMQTT/HBoxConnect"]
layout_mode = 2
size_flags_horizontal = 3
editable = false

[node name="HBoxBroker" type="HBoxContainer" parent="VBoxMQTT"]
layout_mode = 2

[node name="LabelMQTT" type="Label" parent="VBoxMQTT/HBoxBroker"]
layout_mode = 2
text = "MQTTBroker
"

[node name="HBoxRoom" type="HBoxContainer" parent="VBoxMQTT"]
layout_mode = 2
size_flags_vertical = 3

[node name="Labelroom" type="Label" parent="VBoxMQTT/HBoxRoom"]
layout_mode = 2
text = "roomname
"

[node name="HSeparator6" type="HSeparator" parent="."]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="."]
custom_minimum_size = Vector2(550, 0)
layout_mode = 2
size_flags_horizontal = 4
bbcode_enabled = true
text = "Table of users connected on the on the same topic (including self).
"
fit_content = true

[node name="Members" type="GridContainer" parent="."]
layout_mode = 2
columns = 3

[node name="Self" parent="Members" instance=ExtResource("4_w5dv2")]
layout_mode = 2

[node name="Label" parent="Members/Self" index="1"]
text = "Self"

[node name="HBoxVisemes" type="HBoxContainer" parent="."]
visible = false
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="ColorRect" type="ColorRect" parent="HBoxVisemes"]
custom_minimum_size = Vector2(25, 0)
layout_mode = 2
color = Color(0.666793, 0.310188, 0.402942, 1)

[node name="Label" type="Label" parent="HBoxVisemes/ColorRect"]
layout_mode = 0
offset_left = 2.0
offset_right = 42.0
offset_bottom = 23.0
text = "sil"

[connection signal="finished" from="AudioStreamMicrophone" to="." method="_on_audio_stream_microphone_finished"]
[connection signal="toggled" from="HBoxBigButtons/VBoxVox/Vox" to="HBoxMicTalk" method="_on_vox_toggled"]
[connection signal="button_down" from="HBoxBigButtons/VBoxVox/Silence" to="HBoxMicTalk" method="_on_silence_button_down"]
[connection signal="toggled" from="HBoxMicTalk/MicWorking" to="." method="_on_mic_working_toggled"]
[connection signal="value_changed" from="HBoxMicTalk/HSliderVox" to="HBoxMicTalk" method="_on_h_slider_vox_value_changed"]
[connection signal="pressed" from="HBoxPlaycount/Play" to="." method="_on_play_pressed"]
[connection signal="item_selected" from="VBoxFrameLength/HBoxBitRate/BitRate" to="." method="_on_option_button_item_selected"]
[connection signal="item_selected" from="VBoxFrameLength/HBoxOpusFrame/FrameDuration" to="." method="_on_frame_duration_item_selected"]
[connection signal="item_selected" from="VBoxFrameLength/HBoxAudioFrame/ResampleState" to="." method="_on_resample_state_item_selected"]
[connection signal="toggled" from="MQTTnetwork/Connect" to="MQTTnetwork" method="_on_connect_toggled"]
[connection signal="item_selected" from="MQTTnetwork/GridContainer/presets" to="MQTTnetwork" method="_on_mqtt_broker_item_selected"]
[connection signal="toggled" from="VBoxMQTT/HBoxConnect/ConnectMQTT" to="MQTTnetwork" method="_on_connect_mqtt_toggled"]

[editable path="Members/Self"]
